Closed
Bug 1288971
Opened 6 years ago
Closed 6 years ago
The icon on the media control is out of sync
Categories
(Firefox for Android Graveyard :: General, defect, P1)
Tracking
(firefox50 verified)
VERIFIED
FIXED
Firefox 50
Tracking | Status | |
---|---|---|
firefox50 | --- | verified |
People
(Reporter: whsu, Assigned: alwu)
References
Details
Attachments
(2 files)
@ Environment: Device: Nexus 5 (Android 5.1.1); Build: Nightly 50.0a1 (2016-07-19); @ Steps to reproduce: 1. Open Firefox, and then got to "www.youtube.com" to play a video 2. Press home button 3. Open Google Chrome, and then go to "www.youtube.com" 4. Play a video on Google Chrome, and then use app switch button to switch to Firefox 5. Press play button to continue to play the same video on Firefox 6. Swipe down the notification bar to check the status of media control @ Expected result: The video can be played and the icon on the media control is shown as "PAUSE[||]". @ Actual result: The icon on the media control is shown as "PLAY[>]". @ Note: Attach the screenshot (ICON_ON_MEDIA_CONTROL_0725.png)
Comment 1•6 years ago
|
||
Hi Alastor, Could you please kindly help us check this ? Thank you very much !
Flags: needinfo?(alwu)
Updated•6 years ago
|
Blocks: fennec-media-control
Priority: -- → P1
Assignee | ||
Updated•6 years ago
|
Assignee: nobody → alwu
Flags: needinfo?(alwu)
Assignee | ||
Comment 3•6 years ago
|
||
Review commit: https://reviewboard.mozilla.org/r/67932/diff/#index_header See other reviews: https://reviewboard.mozilla.org/r/67932/
Assignee | ||
Comment 4•6 years ago
|
||
Comment on attachment 8775884 [details] Bug 1288971 - notify audio playback changed by media element's play(). Review request updated; see interdiff: https://reviewboard.mozilla.org/r/67932/diff/1-2/
Attachment #8775884 -
Flags: review?(amarchesini)
Updated•6 years ago
|
Attachment #8775884 -
Flags: review?(amarchesini) → review+
Comment 5•6 years ago
|
||
Comment on attachment 8775884 [details] Bug 1288971 - notify audio playback changed by media element's play(). https://reviewboard.mozilla.org/r/67932/#review65072
Assignee | ||
Comment 6•6 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=d0e4d6e69394&selectedJob=24762407
Pushed by alwu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/cf3d0b086060 notify audio playback changed by media element's play(). r=baku
Comment 8•6 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/cf3d0b086060
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 50
Assignee | ||
Comment 9•6 years ago
|
||
Comment on attachment 8775884 [details] Bug 1288971 - notify audio playback changed by media element's play(). Approval Request Comment [Feature/regressing bug #]: Let the media control interface can be consistent with the media element's playing state. [User impact if declined]: Media control would be inconsistent. [Describe test coverage new/current, TreeHerder]: No UI test [Risks and why]: Low, this patch would only affect the control interface. [String/UUID change made/needed]: no
Attachment #8775884 -
Flags: approval-mozilla-beta?
Comment 10•6 years ago
|
||
Now that the feature is behind a Nightly flag you do not necessarily need to request uplift everywhere. As soon as everything is fixed we just remove the flag for the current version and let the changes ride the trains. This will give us some additional testing time too.
Assignee | ||
Updated•6 years ago
|
Attachment #8775884 -
Flags: approval-mozilla-beta?
Comment 11•6 years ago
|
||
Verified as fixed in build 51.0a1 2016-08-05; Device: LG G4 (Android 5.1).
Comment 12•6 years ago
|
||
I'm changing the status to verified fixed considering that the bug is verified.
Status: RESOLVED → VERIFIED
Updated•1 year ago
|
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•