Bug 1288971 - notify audio playback changed by media element's play(). r=baku

Notify audible-changing when resuming audio by MediaElement::play() instead of control interface.

MozReview-Commit-ID: 10a1npQ46Th